--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.1"
 
     defaultConfig {
@@ -31,6 +31,8 @@ repositories {
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.facebook.react:react-native:+'
+    compile 'com.braintreepayments.api:drop-in:3.+'
 }
   
