--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 
 {
-  "name": "react-native-braintree",
-  "version": "1.0.0",
-  "description": "",
+  "name": "react-native-xbraintree",
+  "version": "0.0.1",
+  "description": "React Native Braintree Drop-in Payment UI Library for iOS and Android",
+  "nativePackage": true,
+  "bugs": {
+    "url": "https://github.com/yusufyildirim/react-native-braintree/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yusufyildirim/react-native-braintree.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,11 +18,9 @@
   "keywords": [
     "react-native"
   ],
-  "author": "",
-  "license": "",
+  "author": "Yusuf YILDIRIM <yusuf@puroduction.com> (http://www.puroduction.com)",
+  "license": "MIT",
   "peerDependencies": {
-    "react-native": "^0.41.2",
-    "react-native-windows": "0.41.0-rc.1"
-
+    "react-native": ">=0.41.2"
   }
 }
