--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 }
 
@@ -13,7 +13,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -31,8 +31,8 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.1.0'
+    compile 'com.android.support:support-compat:25.2.0'
     compile 'com.facebook.react:react-native:+'
-    compile 'com.braintreepayments.api:drop-in:3.+'
+    compile 'com.braintreepayments.api:drop-in:3.0.0'
 }
   
